objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + " " +  LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winover_Competitor__c</fullName>
        <formula>IF( ISBLANK(ContactId),  text(Lead.Winover_Competitor__c ), text( Contact.WinOver_Competitor__c ))</formula>
        <label>Winover Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>